--- a/css/clock.css
+++ b/css/clock.css
@@ -7,7 +7,7 @@
         float: left;
         width: 25%;
         text-transform: uppercase;
-        color: #F9E616;
+        color: black;
     }
         .clock .time-box > .time {
             font-size: 50px;
