--- a/styles.css
+++ b/styles.css
@@ -192,5 +192,56 @@ body,html {
 }
 
 
+.story {
+  height:100vh; width: 100vw;
+  background-color: white;
+}
 
+.rep {
+  padding-top: 80px;
+  font-family: "Brother-1816-ExtraBold";
+  width: 50vw;
+  text-align: left;
+  font-size: 40px;
+  color: #266BCC;
+  -webkit-font-smoothing: antialiased;
+  padding-left: 20px;
+}
 
+.storybtn {
+  color: #266BCC;
+}
+
+.intro {
+  font-family: "Brother-1816";
+  padding-top: 100px;
+  padding-left: 20px;
+  width: 50vw;
+  text-align: left;
+  font-size: 20px;
+  color: #266BCC;
+  -webkit-font-smoothing: antialiased;
+}
+
+.link1 {
+  font-family: "Brother-1816-ExtraBold";
+  padding-top: 100px;
+  padding-bottom: 80px;
+  width: 300px;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  -webkit-font-smoothing: antialiased;
+}
+
+.first {
+padding-top: 20px;
+  float: left;
+  max-width: 445px;
+  max-height: 600px;
+}
+
+.second {
+  max-width: 445px;
+  max-height: 578px;
+}
