--- a/styles.css
+++ b/styles.css
@@ -222,7 +222,7 @@ body,html {
 }
 
 .intro {
-  font-family: "Brother-1816";
+  font-family: "Brother-1816-ExtraBold";
   padding-top: 100px;
   padding-left: 20px;
   width: 50vw;
