--- a/styles.css
+++ b/styles.css
@@ -204,6 +204,7 @@ body,html {
 .story {
   height:100vh; width: 100vw;
   background-color: white;
+  max-height: 700px;
 }
 
 .rep {
@@ -244,13 +245,15 @@ body,html {
 }
 
 .first {
-padding-top: 20px;
+  padding-top: 20px;
   float: left;
   max-width: 445px;
   max-height: 600px;
+ 
 }
 
 .second {
   max-width: 445px;
   max-height: 578px;
+ 
 }
