--- a/story.css
+++ b/story.css
@@ -1,4 +1,6 @@
 @import url(//db.onlinewebfonts.com/c/bb766bf6ac06d377a2e9a1899864fffa?family=Brother-1816-ExtraBold);
+@import url(//db.onlinewebfonts.com/c/4c6d4bae00673663979f1879f856ec7e?family=Brother-1816-Light);
+@import url(//db.onlinewebfonts.com/c/10d0501adc787b5f33eec4eefdd9b5b1?family=Brother+1816);
 
 .front {
     height: 600vh;
@@ -37,4 +39,106 @@
     position: absolute;
     top: 150px;
     left: 5vw;
+}
+
+.ianstory1 {
+  font-family: "Brother-1816";
+  padding-top: 40px;
+  padding-bottom: 80px;
+  width: 25vw;
+  font-size: 20px;
+  color: #1b5ab3;
+  -webkit-font-smoothing: antialiased;
+  z-index: 3;
+    position: absolute;
+    top: 250px;
+    left: 5vw;
+}
+
+.a1 {
+  font-family: "Brother-1816-ExtraBold";
+  padding-top: 40px;
+  padding-bottom: 80px;
+  width: 44vw;
+  font-size: 60px;
+  color: white;
+  -webkit-font-smoothing: antialiased;
+  z-index: 3;
+    position: absolute;
+    top: 700px;
+    left: 55vw;
+}
+
+.a2 {
+  font-family: "Brother-1816-ExtraBold";
+  padding-top: 40px;
+  padding-bottom: 80px;
+  width: 25vw;
+  font-size: 40px;
+  color: #F9E616;
+  -webkit-font-smoothing: antialiased;
+  z-index: 3;
+    position: absolute;
+    top: 900px;
+    left: 20vw;
+    text-align: right;
+}
+
+.a3 {
+  font-family: "Brother-1816";
+  padding-top: 40px;
+  padding-bottom: 80px;
+  width: 25vw;
+  font-size: 20px;
+  color: white;
+  -webkit-font-smoothing: antialiased;
+  text-align: right;
+  z-index: 3;
+    position: absolute;
+    top: 950px;
+    left: 20vw;
+}
+
+.b1 {
+  font-family: "Brother-1816-ExtraBold";
+  padding-top: 40px;
+  padding-bottom: 80px;
+  width: 44vw;
+  font-size: 60px;
+  color: #1b5ab3;
+  -webkit-font-smoothing: antialiased;
+  z-index: 3;
+    position: absolute;
+    top: 1500px;
+    left: 55vw;
+}
+
+.b2 {
+    font-family: "Brother-1816-ExtraBold";
+    padding-top: 40px;
+    padding-bottom: 80px;
+    width: 25vw;
+    font-size: 40px;
+    color: #DB504A;
+    -webkit-font-smoothing: antialiased;
+    z-index: 3;
+      position: absolute;
+      top: 1800px;
+      left: 20vw;
+      text-align: right;
+}
+
+.b3 {
+  font-family: "Brother-1816";
+  padding-top: 40px;
+  padding-bottom: 80px;
+  width: 25vw;
+  font-size: 20px;
+  color: #1b5ab3;
+  -webkit-font-smoothing: antialiased;
+  text-align: right;
+  z-index: 3;
+    position: absolute;
+    top: 1850px;
+    left: 20vw;
 }
