--- a/story.css
+++ b/story.css
@@ -3,7 +3,7 @@
 @import url(//db.onlinewebfonts.com/c/10d0501adc787b5f33eec4eefdd9b5b1?family=Brother+1816);
 
 .front {
-    height: 600vh;
+    height: 4800px;
     width: 100vw;
     background-image: url("img/road.png");
     background-position: center;
