--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,19 @@
-@import url(//db.onlinewebfonts.com/c/10d0501adc787b5f33eec4eefdd9b5b1?family=Brother+1816);
-@import url(//db.onlinewebfonts.com/c/bb766bf6ac06d377a2e9a1899864fffa?family=Brother-1816-ExtraBold);
-@import url(//db.onlinewebfonts.com/c/4c6d4bae00673663979f1879f856ec7e?family=Brother-1816-Light);
+
+@font-face {
+  font-family: Brother-1816;
+  src: url("/css/Brother1816-Regular.woff2") format("woff2")
+}
+
+@font-face {
+  font-family: Brother-1816-ExtraBold;
+  src: url("/css/Brother1816-ExtraBold.woff2") format("woff2")
+}
+
+@font-face {
+  font-family: Brother-1816-Light;
+  src: url("/css/Brother1816-Thin.woff2") format("woff2")
+}
+
 * {
   margin: 0;
   padding: 0;
