--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
 body,html {
     margin: 0;
     font: bold 14px/1.4 'Open Sans', arial, sans-serif;
-   
+    scroll-behavior: smooth;
   }
   ul { 
     margin: 0px; 
