--- a/styles.css
+++ b/styles.css
@@ -279,7 +279,10 @@ body,html {
 }
 
 
+.mobile {
+  display: none;
 
+}
 @media only screen and (max-width: 1150px) {
   .fe {
     display: none;
@@ -304,6 +307,18 @@ body,html {
     display: block;
   }
 
+}
+
+@media only screen and (max-width: 1100px) {
+  .desktop {
+    display: none;
+  }
+  
+  .mobile {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @media only screen and (max-width: 700px) {
@@ -336,3 +351,22 @@ body,html {
     font-size: 15px;
   }
 }
+
+@media only screen and (max-width: 700px) {
+  .mobile {
+    display: block;
+    width: 100vw;
+    height: auto;
+    margin-left: -180px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .mobile {
+    display: block;
+    width: 100vw;
+    height: auto;
+    margin-left: -240px;
+  }
+}
+
