--- a/styles.css
+++ b/styles.css
@@ -280,7 +280,7 @@ body,html {
 
 
 .mobile {
-  display: none;
+  visibility: hidden;
 
 }
 @media only screen and (max-width: 1150px) {
@@ -315,7 +315,7 @@ body,html {
   }
   
   .mobile {
-    display: block;
+    visibility: visible;
     margin-left: auto;
     margin-right: auto;
   }
@@ -354,7 +354,7 @@ body,html {
 
 @media only screen and (max-width: 700px) {
   .mobile {
-    display: block;
+    visibility: visible;
     width: 100vw;
     height: auto;
     margin-left: -180px;
@@ -363,7 +363,7 @@ body,html {
 
 @media only screen and (max-width: 400px) {
   .mobile {
-    display: block;
+    visibility: visible;
     width: 100vw;
     height: auto;
     margin-left: -240px;
